--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
             conquiescere ne infantes quidem possint. Quod iam a me expectare noli.</p>
         <section class="tvshow">
             <h3>Show</h3>
-            <img src="images/350x150.png" class="thumbnail">
+            <img src="img/350x150.png" class="thumbnail">
             <p class="showdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
         <section class="tvshow">
             <h3>Show</h3>
-            <img src="images/350x150.png" class="thumbnail">
+            <img src="img/350x150.png" class="thumbnail">
             <p class="showdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
         <section class="tvshow">
             <h3>Show</h3>
-            <img src="images/350x150.png" class="thumbnail">
+            <img src="img/350x150.png" class="thumbnail">
             <p class="showdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
         <section class="tvshow">
             <h3>Show</h3>
-            <img src="images/350x150.png" class="thumbnail">
+            <img src="img/350x150.png" class="thumbnail">
             <p class="showdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
         <section class="tvshow">
             <h3>Show</h3>
-            <img src="images/350x150.png" class="thumbnail">
+            <img src="img/350x150.png" class="thumbnail">
             <p class="showdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
     </section>
