--- a/index.html
+++ b/index.html
@@ -2,114 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Video Sharing</title>
+    <title>Video Stream</title>
     <link rel="stylesheet" type="text/css" media="all" href="layout.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/w3css/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<header><h1>Video Streaming</h1></header>
-<!-- <nav>
-    <ul>
-        <li><a href="#">Menu Item</a></li>
-        <li><a href="#">Menu Item</a></li>
-        <li><a href="#">Menu Item</a></li>
-    </ul>
-</nav> -->
 
-  <div id="topnav_desktop" class="topnav_desktop " role="banner">
-    <div class="topnav_desktop_wrapper">
-      <form class="topnav_menu_search" action="//vimeo.com/search" method="get" role="search" data-ds-protection="">
-        <input class="topnav_menu_search_input js-topnav_menu_search_input js-search_autocomplete js-search_vod_autocomplete js-search_stock_autocomplete" type="text" name="q" title="Buscar videos, personas y más" value="hola" aria-label="Buscar videos, personas y más" placeholder="Buscar videos, personas y más" autocomplete="off">
-        <button class="topnav_menu_search_submit topnav_icon_search_b" type="submit" aria-label="Search"></button>
-        <ul class="autocomplete_wrapper" style="display: none;"></ul>
-        <ul class="autocomplete_wrapper" style="display: none;"></ul>
-      </form>
-      <a class="topnav_desktop_logo" href="//vimeo.com"></a>
-      <a class="topnav_stock_logo" href="/stock">
-        <svg alt="Vimeo"
-      </a>
-      <nav class="topnav_desktop_menu" role="navigation" aria-label="Menú principal">
-        <ul class="topnav_menu_desktop_main" role="menubar">
-          <li class="topnav_desktop_menu_items" data-menu-id="join">
-            <a class="topnav_menu_join js-topnav_menu_auth" onclick="event.preventDefault();vimeo.Modal.create({size:'xsmall',content:'/join?modal=new'}).then(completeUserLogin)" data-ga-event-click="top_nav|join" data-fatal-attraction="container:top_nav|component:join" data-gtm-click="top_nav_join_click" href="//vimeo.com/join" title="Conviértete en miembro de Vimeo" rel="toggle" role="button" aria-owns="topnav_join">
-              Unirse
-            </a>
-          </li>
-          <li class="topnav_desktop_menu_items" data-menu-id="login">
-            <a class="js-topnav_menu_auth" onclick="event.preventDefault();vimeo.Modal.create({size:'xsmall',content:'/log_in?modal=new'}).then(completeUserLogin)" data-ga-event-click="top_nav|login" data-fatal-attraction="container:top_nav|component:login" data-gtm-click="top_nav_login_click" href="//vimeo.com/log_in" title="Inicia sesión en tu cuenta" rel="toggle" role="button" aria-owns="topnav_login">
-              Iniciar sesión
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <div class="topnav_menu_right">
-        <div class="topnav_desktop_video_popover" onmouseenter="trackNewVideoDropdownImpression()">
-          <button id="new_video_dropdown_button" class="topnav_desktop_video_popover_button iris_btn--primary" data-fatal-attraction="container:top_nav|component:new_video" onclick="handleNewVideoClick()">
-            <span class="topnav_desktop_video_popover_span_wrapper">
-              <span class="topnav_desktop_video_popover_span">
-                <svg viewBox="0 0 24 24">
-                  <path d="M18 11h-5V6a1 1 0 1 0-2 0v5H6a1 1 0 0 0 0 2h5v5a1 1 0 0 0 2 0v-5h5a1 1 0 0 0 0-2z" fill="#1a2e3b"></path>
-                </svg>
-              </span>
-              Nuevo video
-            </span>
-          </button>
-          <ul class="topnav_desktop_menu_items_dropdown topnav_desktop_video_popover_dropdown" role="menu" aria-hidden="true">
-            <li class="topnav_desktop_menu_items_dropdown_item" role="menuitem" tabindex="-1">
-              <a data-fatal-attraction="container:top_nav|component:new_video|keyword:{'action':'upload'}|target:/upload|type:click" id="topnav_desktop_upload_button" href="//vimeo.com/upload">Subir</a>
-            </li>
-          </ul>
-        </div>
-        <div id="cart_top_nav" class="topnav_cart_button"></div>
-      </div>
-    </div>
+  <div class="w3-bar w3-light-grey w3-border">
+    <a href="#" class="w3-bar-item w3-button" onclick="w3_open()">&#9776;</a>
+    <a href="#" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-mobile">nada</a>
+    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
+    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
+    <input type="text" class="w3-bar-item w3-input w3-white w3-mobile" placeholder="Search..">
+    <button class="w3-bar-item w3-button w3-green w3-mobile">Go</button>
+  </div>
+<div class="w3-sidebar w3-bar-block w3-light-grey w3-collapse w3-card w3-animate-left" style="width:200px;" id="mySidebar">
+  <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Menú &times;</button>
+  <a href="#" class="w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-bar-item w3-button">Link 3</a>
 </div>
 
 
 
-<main>
-    <section class="showslisting left">
-        <h2>Site Introduction</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Septem autem illi non suo, sed populorum suffragio
-            omnium
-            nominati sunt. Itaque sensibus rationem adiunxit et ratione effecta sensus non reliquit. Videmus igitur ut
-            conquiescere ne infantes quidem possint. Quod iam a me expectare noli.</p>
-        <section class="tvshow">
-            <h3>Show</h3>
-            <img src="img/350x150.png" class="thumbnail">
-            <p class="showdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </section>
-        <section class="tvshow">
-            <h3>Show</h3>
-            <img src="img/350x150.png" class="thumbnail">
-            <p class="showdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </section>
-        <section class="tvshow">
-            <h3>Show</h3>
-            <img src="img/350x150.png" class="thumbnail">
-            <p class="showdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </section>
-        <section class="tvshow">
-            <h3>Show</h3>
-            <img src="img/350x150.png" class="thumbnail">
-            <p class="showdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </section>
-        <section class="tvshow">
-            <h3>Show</h3>
-            <img src="img/350x150.png" class="thumbnail">
-            <p class="showdescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </section>
-    </section>
-    <aside class="left">
-        <ul>
-            <li>one</li>
-            <li>two</li>
-            <li>three</li>
-        </ul>
-    </aside>
-</main>
-<footer>
-    I am a footer
-</footer>
+<script>
+function w3_open() {
+  document.getElementById("mySidebar").style.display = "block";
+}
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
+
+
+
+
 </body>
 </html>
