--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 
   <div class="w3-bar w3-light-grey w3-border">
-    <a href="#" class="w3-bar-item w3-button" onclick="w3_open()">&#9776;</a>
+    <!-- <a href="#" class="w3-bar-item w3-button w3-green" class="w3-bar-item w3-button w3-mobile" onclick="w3_open()">&#9776;</a> -->
+    <button class="w3-button w3-white w3-xxlarge" onclick="w3_open()">&#9776;</button>
     <a href="#" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-mobile">nada</a>
     <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
@@ -19,23 +20,26 @@
     <input type="text" class="w3-bar-item w3-input w3-white w3-mobile" placeholder="Search..">
     <button class="w3-bar-item w3-button w3-green w3-mobile">Go</button>
   </div>
-<div class="w3-sidebar w3-bar-block w3-light-grey w3-collapse w3-card w3-animate-left" style="width:200px;" id="mySidebar">
-  <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Menú &times;</button>
-  <a href="#" class="w3-bar-item w3-button">Link 1</a>
-  <a href="#" class="w3-bar-item w3-button">Link 2</a>
-  <a href="#" class="w3-bar-item w3-button">Link 3</a>
-</div>
+  <div class="w3-sidebar w3-bar-block w3-animate-left" style="display:none;z-index:5" id="mySidebar">
+    <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
+    <a href="#" class="w3-bar-item w3-button">Link 1</a>
+    <a href="#" class="w3-bar-item w3-button">Link 2</a>
+    <a href="#" class="w3-bar-item w3-button">Link 3</a>
+  </div>
 
+  <div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
 
+  <script>
+  function w3_open() {
+    document.getElementById("mySidebar").style.display = "block";
+    document.getElementById("myOverlay").style.display = "block";
+  }
 
-<script>
-function w3_open() {
-  document.getElementById("mySidebar").style.display = "block";
-}
-function w3_close() {
-  document.getElementById("mySidebar").style.display = "none";
-}
-</script>
+  function w3_close() {
+    document.getElementById("mySidebar").style.display = "none";
+    document.getElementById("myOverlay").style.display = "none";
+  }
+  </script>
 
 
 
