intentando arreglar con css

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" type="text/css" media="all" href="layout.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/w3css/w3.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
   <div class="w3-bar w3-light-grey w3-border">
-    <!-- <a href="#" class="w3-bar-item w3-button w3-green" class="w3-bar-item w3-button w3-mobile" onclick="w3_open()">&#9776;</a> -->
-    <button class="w3-button w3-white w3-xxlarge" onclick="w3_open()">&#9776;</button>
+    <button class="w3-button w3-white w3-xxlarge" id="menu" onclick="w3_open()">&#9776;</button>
     <a href="#" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-mobile">nada</a>
     <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
