Commit only for pull.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <link rel="stylesheet" type="text/css" media="all" href="layout.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-<header><h1>Site Name</h1></header>
+
+<div class="masthead">
+    <header>
+            <h1 style="color: black;">WeTube</h1>
+    </header>
+</div>
 <nav>
     <ul>
         <li><a href="#">Menu Item</a></li>
@@ -18,10 +24,7 @@
 <main>
     <section class="showslisting left">
         <h2>Site Introduction</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Septem autem illi non suo, sed populorum suffragio
-            omnium
-            nominati sunt. Itaque sensibus rationem adiunxit et ratione effecta sensus non reliquit. Videmus igitur ut
-            conquiescere ne infantes quidem possint. Quod iam a me expectare noli.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis earum officiis ipsum a harum numquam aut id aperiam eum error! Veritatis numquam quam, quasi libero omnis quia nesciunt accusantium quod?</p>
         <section class="tvshow">
             <h3>Show</h3>
             <img src="img/350x150.png" class="thumbnail">
