--- a/index.html
+++ b/index.html
@@ -12,32 +12,61 @@
 <body>
 
   <div class="w3-bar w3-light-grey w3-border">
-    <button class="w3-button w3-white w3-xxlarge" id="menu" onclick="w3_open()">&#9776;</button>
-    <a href="#" class="w3-bar-item w3-button w3-green"><i class="fa fa-home"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-mobile">nada</a>
-    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
-    <input type="text" class="w3-bar-item w3-input w3-white w3-mobile" placeholder="Search..">
-    <button class="w3-bar-item w3-button w3-green w3-mobile">Go</button>
+    <img src="/img/logo2.jpg" class="w3-bar-item w3-button w3-mobile w3-round-xxlarge" alt="Norway" style="width:10%">
+    <button class="w3-bar-item w3-button w3-mobile w3-white" id="menu" onclick="w3_open()">&#9776;</button>
+
+    <a href="#" class="w3-bar-item w3-button w3-mobile w3-hover-teal w3-green fa fa-home"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-mobile" style="vertical-align: middle;">Join</a>
+    <a href="#" class="w3-bar-item w3-button w3-mobile">Log in</a>
+    <a href="#">
+      <button class="w3-bar-item w3-button w3-green w3-mobile" style="float:right;">Go</button>
+      <input type="text" class="w3-bar-item w3-input w3-white w3-mobile" placeholder="Search.." style="float:right;">
+    </a>
   </div>
-  <div class="w3-sidebar w3-bar-block w3-animate-left" style="display:none;z-index:5" id="mySidebar">
+  <div class="w3-sidebar w3-bar-block w3-animate-left w3-border-right" style="display:none;z-index:5;" id="mySidebar">
     <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
-    <a href="#" class="w3-bar-item w3-button">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button">Link 3</a>
+    <a href="#" class="w3-bar-item w3-button">Página principal</a>
+    <a href="#" class="w3-bar-item w3-button">Tendencias</a>
+    <a href="#" class="w3-bar-item w3-button">Suscripciones</a>
+    <a href="#" class="w3-bar-item w3-button"></a>
+    <a href="#" class="w3-bar-item w3-button">Biblioteca</a>
+    <a href="#" class="w3-bar-item w3-button">Historial</a>
+    <a href="#" class="w3-bar-item w3-button">Videos que me gustan</a>
   </div>
 
-  <div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
+  <!-- <div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <script>
   function w3_open() {
     document.getElementById("mySidebar").style.display = "block";
-    document.getElementById("myOverlay").style.display = "block";
+    // document.getElementById("myOverlay").style.display = "block";
   }
 
   function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
-    document.getElementById("myOverlay").style.display = "none";
+    // document.getElementById("myOverlay").style.display = "none";
   }
   </script>
 
