--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Video Stream</title>
         <link rel="stylesheet" type="text/css" media="all" href="css/layout.css">
         <link rel="stylesheet" type="text/css" href="w3css/w3.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
