--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
 
         <header>
             <div class="w3-bar w3-light-grey w3-border">
-                <button class="w3-bar-item w3-button w3-mobile w3-white" id="menu" onclick="w3_open()">&#9776;</button>
+                <div class="w3-sidebar w3-bar-block w3-border-right" style="display:none" id="mySidebar">
+                  <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
+                  <!-- <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button> -->
+                  <a href="#" class="w3-bar-item w3-button">Página principal</a>
+                  <a href="#" class="w3-bar-item w3-button">Tendencias</a>
+                  <a href="#" class="w3-bar-item w3-button">Suscripciones</a>
+                  <a href="#" class="w3-bar-item w3-button"></a>
+                  <a href="#" class="w3-bar-item w3-button">Biblioteca</a>
+                  <a href="#" class="w3-bar-item w3-button">Historial</a>
+                  <a href="#" class="w3-bar-item w3-button">Videos que me gustan</a>
+                </div>
+                <button class="w3-bar-item w3-button w3-mobile w3-white w3-left" id="menu" onclick="w3_open()">&#9776;</button>
                 <img src="img/logo2.jpg" class="w3-bar-item w3-button w3-mobile w3-round-xxlarge" alt="Norway" style="width:10%">
 
                 <a href="#" class="w3-bar-item w3-button w3-mobile w3-hover-teal w3-green fa fa-home"><i></i></a>
@@ -40,16 +51,6 @@
                 </a>
             </div>
 
-            <div class="w3-sidebar w3-bar-block w3-animate-left w3-border-right" style="display:none;z-index:5;" id="mySidebar">
-                <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
-                <a href="#" class="w3-bar-item w3-button">Página principal</a>
-                <a href="#" class="w3-bar-item w3-button">Tendencias</a>
-                <a href="#" class="w3-bar-item w3-button">Suscripciones</a>
-                <a href="#" class="w3-bar-item w3-button"></a>
-                <a href="#" class="w3-bar-item w3-button">Biblioteca</a>
-                <a href="#" class="w3-bar-item w3-button">Historial</a>
-                <a href="#" class="w3-bar-item w3-button">Videos que me gustan</a>
-            </div>
 
             <div class="w3-overlay w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
         </header>
